# IMServer

./: CMakeLists.txt  Connection.h  README.md  main.c
CONFIG/: config.txt
DATABASES/: CONNECTDATABASE.c  CONNECTDATABASE.h
FUNCTION/: Connection.c  Connection.h  InitConnection.c  InitConnection.h
HEADER/: SET.h
SETCONFIG/: CONNECTIONSET.h  SET.h
TOOL/: GETConfig.c
lib/: static_lib.h
